<resources>
    <string name="app_name">Aplikasi Catatan Ramadhan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baca_catatan">Catatan</string>
    <string name="background">background</string>
    <string name="catatan_ramadhan">Catatan Ramadhan</string>
    <string name="apakah_anda_berpuasa">Apakah Anda Berpuasa ?</string>
    <string name="tanggal">Sekarang Tanggal Berapa? (Hari, Tanggal)</string>
    <string name="sholat_tarawih">Sholat Tarawih</string>
    <string name="sholat_tahajud">Sholat Tahajud</string>
    <string name="membaca_quran">Membaca Al-Quran</string>
    <string name="sedekah_infaq">Sedekah / Infaq</string>
    <string name="mengikuti_kajian">Mengikuti Kajian</string>
    <string name="button">button</string>
    <string name="edit_catatan_ramadhan">Edit Catatan Ramadhan</string>
    <string name="ramadhan_hari_ke">Ramadhan Hari Ke?</string>
    <string name="tuliskan_catatan_kamu_disini">Tuliskan Catatan Kamu Disini</string>
    <string name="sholat_5_waktu">Sholat 5 Waktu</string>
    <string name="jadwal_ibadah">Jadwal Ibadah</string>
    <string name="karakter">karakter</string>
    <string name="sekarang_sudah_jam">Sekarang Sudah Jam</string>
    <string name="imsak">Imsak</string>
    <string name="jam_imsak">04:15</string>
    <string name="sholat_subuh">Sholat Subuh</string>
    <string name="jam_subuh">04:34</string>
    <string name="sholat_dzuhur">Sholat Dzuhur</string>
    <string name="jam_dzuhur">11:52</string>
    <string name="sholat_ashar">Sholat Ashar</string>
    <string name="jam_ashar">15:10</string>
    <string name="sholat_magrib">Sholat Magrib</string>
    <string name="berbuka">Berbuka</string>
    <string name="jam_magrib">17:53</string>
    <string name="jam_isya">19:01</string>
    <string name="sholat_isya">Sholat Isya</string>
    <string name="icon">icon</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="belum_punya_akun">Belum Punya Akun? Klik Disini</string>
    <string name="masukan_username">Masukan Username</string>
    <string name="masukan_email">Masukan Email</string>
    <string name="masukan_password">Masukan Password</string>
    <string name="masukan_kembali_password">Masukan Kembali Password</string>
    <string name="register">Register</string>
    <string name="sudah_punya_akun_klik_disini">Sudah Punya Akun? Klik Disini</string>
    <string name="text_star">1</string>
    <string name="puasa_hari_ke">Puasa Hari Ke -</string>
    <string name="tanggal_rv">Senin / 04 April 2022</string>
    <string name="wajib">* Wajib untuk mengisi hari</string>
    <string name="note">Note : Jadwal ibadah berikut merupakan perkiraan waktu untuk wilayah bandung per 08/04/22</string>
</resources>